--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,15 @@ authors = ["Adam Wright <shaladdle@gmail.com>", "Tim Kuehn <timothy.j.kuehn@gmai
 keywords = []
 edition = "2018"
 
-
 [dependencies]
 piston_window = "0.104.0"
 log = "0.4"
 pretty_env_logger = "0.3"
+tarpc = { version = "0.19", features = ["serde1"] }
+serde = { version = "1.0", features = ["derive"] }
+futures-preview = { version = "0.3.0-alpha.18" }
+clap = "2.0"
+tokio = "0.2.0-alpha.5"
+tarpc-json-transport = "0.1"
+tokio-timer = "*"
+tokio-executor = "0.2.0-alpha.5"
