--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ keywords = []
 
 [dependencies]
 piston_window = "0.104.0"
-log = "*"
-pretty_env_logger = "*"
+log = "0.4"
+pretty_env_logger = "0.3"
