--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 piston_window = "0.104.0"
 log = "0.4"
 pretty_env_logger = "0.3"
-tarpc = { version = "0.19", features = ["serde1"] }
+tarpc = { version = "0.19", features = ["serde1"], default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 futures-preview = { version = "0.3.0-alpha.18" }
 clap = "2.0"
