--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ futures-preview = { version = "0.3.0-alpha.18" }
 clap = "2.0"
 tokio = "0.2.0-alpha.5"
 tarpc-json-transport = "0.1"
-tokio-timer = "*"
 tokio-executor = "0.2.0-alpha.5"
+slab = "*"
