--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,11 @@ edition = "2018"
 piston_window = "0.104.0"
 log = "0.4"
 pretty_env_logger = "0.3"
-tarpc = { version = "0.19", features = ["serde1"], default-features = false }
+tarpc = { version = "0.20", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
-futures-preview = { version = "0.3.0-alpha.18" }
+futures = { version = "0.3" }
 clap = "2.0"
-tokio = "0.2.0-alpha.5"
-tarpc-json-transport = "0.1"
-tokio-executor = "0.2.0-alpha.5"
+tokio = { version = "0.2", features = ["sync"] }
+tokio-serde = { version = "0.6", features = ["json"] }
 slab = "=0.4.2"
 rand = "0.7.2"
