--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tarpc = { version = "0.20", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 futures = { version = "0.3" }
 clap = "2.0"
+once_cell = "1.0"
 tokio = { version = "0.2", features = ["sync"] }
 tokio-serde = { version = "0.6", features = ["json"] }
 slab = "=0.4.2"
