--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 piston_window = "0.104.0"
 log = "0.4"
 pretty_env_logger = "0.3"
-tarpc = { version = "0.20", features = ["full"] }
+tarpc = { version = "0.21", features = ["full"], git = "https://github.com/tikue/tarpc", branch = "gats" }
 serde = { version = "1.0", features = ["derive"] }
 futures = { version = "0.3" }
 clap = "2.0"
